/*
 *
 */

2009-07-04 00:29 UTC+0200 Viktor Szakats (harbour.01 syenar.hu)
  * wxharbour.hbc
    ! Turn on C++ mode on darwin. Otherwise there are link
      errors.

2009-07-03 17:15 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.gcc
  * makefile.vc
    - removed now unneeded wxGET.prg

  * include/wxHarbour/wxharbour.ch
    * minor code cleanup

  * samples/bitmapButton/bitmapButton.prg
    * changed sample to show how to deal with a not existent bitmap image

  * src/common/wxhfuncs.prg
    * enhanced default message box when showing a GET warning
    * changed code to use a default bitmap if an non existent one is provided

  * src/wxbase/baseclasses/wx_Window.cpp
  * src/wxbase/baseclasses/wxhWindow.prg
    * added method:
      + GetGrandParent()

  * src/wxbase/controls/wx_ComboBox.cpp
  * src/wxbase/menu/wx_MenuItem.cpp
    * removed wrong #ifdef's based on wxWidgets version
      ; TODO: fix this and check wxHarbour to work with main stream versions
        installed (MacOS, Linux, Windows)

  - src/hrbcompat/misc/wxGET.prg
    * removed unneeded source

2009-07-03 22:03 UTC+0200 Viktor Szakats (harbour.01 syenar.hu)
  * wxharbour.hbp
  * wxharbour.hbc
    + Updated to require no extra configuration on Linux.
      (requires Harbour 2.0.0 r11630 or newer)

2009-07-03 20:05 UTC+0200 Viktor Szakats (harbour.01 syenar.hu)
  * wxharbour.hbp
  * wxharbour.hbc
    + Added hbmk2 instructions + support for Linux platform.

2009-07-02 18:38 UTC+0200 Viktor Szakats (harbour.01 syenar.hu)
  * wxharbour.hbp
    + Added toolbar dir.

2009-07-02 18:15 UTC+0200 Viktor Szakats (harbour.01 syenar.hu)
  * wxharbour.hbp
    % Using wildcards instead of listing files explicitly.
      This way only source dirs/filetypes need to be synced
      in this make file, not every new source file.

2009-07-02 08:00 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxHarbour/wxharbour.ch